--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="logo">
                 <a href="index.html"><img
                         src="https://www.royalchallengers.com/themes/custom/rcbbase/images/rcb-logo-new.png"
-                        class="logoImg"></a>
+                        id="logoImg"></a>
             </div>
             <div class="right">
                 <ul>
